# radiance-webassembly

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  build_javascript.py  serve_javascript.py
src/bindings/: bindings.cpp  bindings.h
src/common/: testBSDF.c
